# solshade

./: .gitignore  README.md  pyproject.toml
src/solshade/: cli.py  irradiance.py  solar.py  terrain.py  utils.py  viz.py
tests/: test_cli.py  test_irradiance.py  test_solar.py  test_terrain.py  test_utils.py  test_viz.py
