[project]
name = "solshade"
version = "0.1.0"
description = "Terrain-aware solar illumination modeling using DEMs and orbital sun geometry."
authors = [{ name = "Aman Chokshi", email = "aman.chokshi@mcgill.ca" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Repository" = "https://github.com/amanchokshi/solshade"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipympl>=0.9.7",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.5",
    "poethepoet>=0.36.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format"
lint = "ruff check --fix"
check = "pyright"
test = "pytest"
all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
	"A",    # warn about shadowing built-ins
	"E",    # style stuff, whitespaces
	"F",    # important pyflakes lints
	"I",    # import sorting
	"N",    # naming
]

[tool.ruff.lint.isort]
known-first-party = ["solshade"]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.11"
