[project]
name = "solshade"
version = "0.1.0"
description = "Terrain-aware solar illumination modeling using DEMs and orbital sun geometry."
authors = [{ name = "Aman Chokshi", email = "aman.chokshi@mcgill.ca" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "cmasher>=1.9.2",
    "joblib>=1.5.1",
    "matplotlib>=3.10.5",
    "more-itertools>=10.7.0",
    "numba==0.61.2",
    "numpy==2.2",
    "pandas>=2.3.1",
    "rasterio>=1.4.3",
    "rich>=14.1.0",
    "rioxarray>=0.19.0",
    "scipy>=1.16.1",
    "skyfield>=1.53",
    "typer>=0.16.0",
]

[project.urls]
Repository = "https://github.com/amanchokshi/solshade"

[project.scripts]
solshade = "solshade.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.uv]
package = true

[dependency-groups]
dev = [
    "affine>=2.4.0",
    "ipympl>=0.9.7",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.5",
    "poethepoet>=0.36.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
check = "pyright"
coverage = { cmd = "pytest --cov=solshade --cov-report=term-missing", env = { PYTHONPATH = "src" } }
all = ["fmt", "lint", "check", "coverage"]

[tool.ruff]
target-version = "py311"
line-length = 128
src = ["src"]

[tool.ruff.lint]
select = [
    "A",  # built-in shadowing
    "E",  # style
    "F",  # pyflakes
    "I",  # import sorting
    "N",  # naming
]

[tool.ruff.lint.isort]
known-first-party = ["solshade"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
reportUnknownMemberType = false
reportUnknownVariableType = false
include = ["src"]
exclude = ["tests", "**/__pycache__"]
